# ChangeLog for dev-python/werkzeug
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/werkzeug/ChangeLog,v 1.23 2010/12/13 16:29:48 arfrever Exp $

  13 Dec 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  werkzeug-0.6.2.ebuild:
  dev-python/py -> dev-python/pytest.

  11 Jun 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  werkzeug-0.6.2.ebuild:
  x86 stable wrt bug #321347

  26 May 2010; Pacho Ramos <pacho@gentoo.org> werkzeug-0.6.2.ebuild:
  stable amd64, bug 321347

  26 Apr 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> werkzeug-0.6.ebuild:
  x86 stable wrt bug #314937

  25 Apr 2010; Javier Villavicencio <the_paya@gentoo.org>
  werkzeug-0.6.2.ebuild:
  Keyworded ~x86-fbsd.

*werkzeug-0.6.2 (24 Apr 2010)

  24 Apr 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +werkzeug-0.6.2.ebuild:
  Version bump.

  16 Apr 2010; Markos Chandras <hwoarang@gentoo.org> werkzeug-0.6.ebuild:
  Stable on amd64 wrt bug #314937

*werkzeug-0.6.1 (13 Apr 2010)

  13 Apr 2010; Dirkjan Ochtman <djc@gentoo.org> +werkzeug-0.6.1.ebuild:
  Version bump to 0.6.1.

  10 Mar 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  werkzeug-0.6.ebuild:
  Set SUPPORT_PYTHON_ABIS.

*werkzeug-0.6 (21 Feb 2010)

  21 Feb 2010; Patrick Lauer <patrick@gentoo.org> +werkzeug-0.6.ebuild:
  Bump

  20 Dec 2009; Fabian Groffen <grobian@gentoo.org> werkzeug-0.5.1.ebuild:
  Merged keywords from Prefix

  04 Sep 2009; Patrick Lauer <patrick@gentoo.org> -werkzeug-0.4.1.ebuild,
  -werkzeug-0.5.ebuild:
  Remove old

  01 Sep 2009; Patrick Lauer <patrick@gentoo.org> werkzeug-0.4.1.ebuild,
  werkzeug-0.5.ebuild, werkzeug-0.5.1.ebuild:
  Fixing missing unzip dep, closes #283209

*werkzeug-0.5.1 (25 Jul 2009)

  25 Jul 2009; Patrick Lauer <patrick@gentoo.org> +werkzeug-0.5.1.ebuild:
  Bump to 0.5.1, fixes #278349

*werkzeug-0.5 (25 Apr 2009)
