@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/werkzeug
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/werkzeug/ChangeLog,v 1.23 2010/12/13 16:29:48 arfrever Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/werkzeug/ChangeLog,v 1.24 2011/07/24 16:10:25 rafaelmartins Exp $
+
+*werkzeug-0.7 (24 Jul 2011)
+
+  24 Jul 2011; Rafael G. Martins <rafaelmartins@gentoo.org>
+  +werkzeug-0.7.ebuild:
+  Version bump.
 
   13 Dec 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
   werkzeug-0.6.2.ebuild:
